--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -14,8 +14,14 @@ dependencies:
   cupertino_icons: ^1.0.8
   drift: ^2.29.0
   get_it: ^8.2.0
+  drift_flutter: ^0.2.7
+  sqlite3_flutter_libs: ^0.5.0
+  path_provider: ^2.1.0
+  provider: ^6.1.5+1
 
 dev_dependencies:
+  drift_dev: ^2.17.0
+  build_runner: ^2.4.0
   flutter_test:
     sdk: flutter
 
